@@ -44,7 +44,7 @@ extern std::map<const std::string, Root> objectDefinitions;
 extern Factories objectFactory;
 //extern Factories objectInstanceFactory;
 
-Root messageObject2ClassObject(const Atlas::Message::Element& mobj);
+Root messageElement2ClassObject(const Atlas::Message::Element& mobj);
 
 } } // namespace Atlas::Objects
 
