@@ -17,11 +17,6 @@ some are overridden in a subclass.
 Write codecs, connectors and acceptors for datagram based communication,
 specialising Codec<> template using an abstract datagram class interface.
 
-Talk about a non-smartpointer based objects API, as I am not comfortable
-coding with the automatic one. The API should be somewhat similar to
-the 0.4 API, but should not require the dumb instantiate() arse, and
-should provide a virtual clone() method.
-
 Write acceptor/negotiator for file based atlas, to load from a file
 of unknown codec.
 
